@@ -7,10 +7,13 @@ plugins {
     id 'org.owasp.dependencycheck' version '6.2.2'
     id 'com.github.ben-manes.versions' version '0.39.0'
     id 'org.sonarqube' version '3.3'
-    id 'uk.gov.hmcts.java' version '0.12.2'
+    id 'uk.gov.hmcts.java' version '0.12.27'
     id 'io.freefair.lombok' version '5.3.0'
     id 'org.flywaydb.flyway' version '8.2.2'
+    id "info.solidsoft.pitest" version '1.7.4'
 }
+
+apply plugin: "info.solidsoft.pitest"
 
 group = 'uk.gov.hmcts.reform'
 version = '0.0.1'
@@ -57,6 +60,7 @@ test {
     failFast = true
 }
 
+
 task functional(type: Test) {
     description = "Runs functional tests"
     group = "Verification"
@@ -72,6 +76,22 @@ task integration(type: Test) {
     failFast = true
     mustRunAfter test
 }
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+  // The line below prevents the build from failing if the Fortify scan detects issues
+  ignoreExitValue = true
+}
+
+task checkoutDataStoreMigrationScripts (type: Exec){
+   executable "src/integrationTest/resources/scripts/checkout-datastore-db-scripts.sh"
+   outputs.upToDateWhen { false }
+}
+
+//**** Uncomment this line to checkout latest data-store-api migration scripts *****
+//integration.dependsOn(checkoutDataStoreMigrationScripts)
 
 check.dependsOn integration
 
@@ -102,7 +122,8 @@ sonarqube {
         property "sonar.projectKey", "uk.gov.hmcts.reform:ccd-case-disposer"
         property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
         property "sonar.coverage.exclusions", "**/ccd/ApplicationBootstrap.java"
-        property "sonar.exclusions", "**/parameter/*.java,**/config/*.java,**/dao/*.java,**/util/DefaultSnooper.java"
+        property "sonar.pitest.mode", "reuseReport"
+        property "sonar.pitest.reportsDirectory", "build/reports/pitest"
     }
 }
 
@@ -142,6 +163,9 @@ dependencyManagement {
             entry 'spring-cloud-starter-openfeign'
             entry 'spring-cloud-openfeign-core'
         }
+        dependencySet(group: 'org.yaml', version: '1.33') {
+            entry 'snakeyaml'
+        }
     }
 }
 
@@ -152,6 +176,37 @@ repositories {
         url 'https://jitpack.io'
     }
 }
+
+pitest {
+    pitestVersion.set('1.7.4')
+    junit5PluginVersion.set('0.15')
+    targetClasses = ['uk.gov.hmcts.reform.*']
+    excludedClasses = [
+            'uk.gov.hmcts.reform.ccd.madeup.*'
+    ]
+    threads = 10
+    enableDefaultIncrementalAnalysis = true
+    outputFormats = ['XML', 'HTML']
+    timestampedReports = false
+    mutationThreshold = 50
+    timeoutConstInMillis = 30000
+    mutators.set([
+            'CONDITIONALS_BOUNDARY',
+            'INCREMENTS',
+            'INVERT_NEGS',
+            'MATH',
+            'NEGATE_CONDITIONALS',
+            'VOID_METHOD_CALLS',
+            'EMPTY_RETURNS',
+            'FALSE_RETURNS',
+            'NULL_RETURNS',
+            'PRIMITIVE_RETURNS',
+            'TRUE_RETURNS',
+            'REMOVE_CONDITIONALS'
+    ])
+}
+
+project.tasks['pitest'].group = "Verification"
 
 def versions = [
      junit               : '5.7.2',
@@ -164,8 +219,12 @@ def versions = [
      s2sClient           : '4.0.3',
      commonsIo           : '2.7',
      wiremock            : '2.21.0',
-     springFramework     : '5.3.18',
-     springBoot          : springBoot.class.package.implementationVersion
+     lombok              : '1.18.20',
+     gradlePitest        : '1.6.0',
+     pitest              : '1.6.3',
+     sonarPitest         : '0.5',
+     springFramework     : '5.3.20',
+     springBoot          : springBoot.class.package.implementationVersion,
 ]
 
 ext.libraries = [
@@ -180,17 +239,12 @@ ext.libraries = [
 
 ext['spring-framework.version'] = '5.3.20'
 ext['log4j2.version'] = '2.17.1'
-ext['jackson.version'] = '2.13.2'
+ext['jackson.version'] = '2.14.1'
 
 dependencies {
-    compile "com.fasterxml.jackson.core:jackson-databind:2.13.2.2"
-    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.13.2'
-    compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-jaxb-annotations', version: '2.13.2'
 
     implementation group: 'commons-io', name: 'commons-io', version: versions.commonsIo
     implementation group: 'io.rest-assured', name: 'rest-assured', version: versions.restAssured
-
-    implementation group: 'org.flywaydb', name: 'flyway-core', version: '8.2.2'
 
     implementation group: 'org.springframework', name:'spring-webmvc', version: versions.springFramework
 
@@ -212,6 +266,7 @@ dependencies {
     configurations {
         compile.exclude module: 'spring-boot-starter-logging'
     }
+    implementation group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.5.7'
 
     implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: versions.reformLogging
     implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: versions.reformLogging
@@ -221,10 +276,11 @@ dependencies {
     implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.10'
 
     implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.5.7.Final'
-    runtime group: 'org.postgresql', name: 'postgresql', version: '42.2.23'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.5.1'
 
-    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
-    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.20'
+    implementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+    testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
 
     implementation group: 'org.elasticsearch', name: 'elasticsearch', version: versions.elasticsearch
     implementation group: 'org.elasticsearch.client', name: 'elasticsearch-rest-client', version: versions.elasticsearch
@@ -240,8 +296,14 @@ dependencies {
     testImplementation group: 'org.testcontainers', name: 'elasticsearch', version: versions.testcontainers
     testImplementation group: 'org.awaitility', name: 'awaitility', version: '3.0.0'
     testImplementation group: 'com.github.tomakehurst', name: 'wiremock-jre8-standalone', version: versions.wiremock
+    testImplementation group: 'org.flywaydb', name: 'flyway-core', version: '8.2.2'
 
     testImplementation group: 'com.pivovarit', name: 'throwing-function', version: '1.5.1'
+
+    testImplementation group: 'org.pitest', name: 'pitest', version: versions.pitest
+    testImplementation group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: versions.gradlePitest
+    testImplementation 'org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5'
+    testImplementation 'com.github.hmcts:fortify-client:1.3.0:all'
 
     integrationTestImplementation sourceSets.main.runtimeClasspath
     integrationTestImplementation sourceSets.test.runtimeClasspath
@@ -265,3 +327,16 @@ bootJar {
 wrapper {
     distributionType = Wrapper.DistributionType.ALL
 }
+
+rootProject.tasks.named("processTestResources") {
+  duplicatesStrategy = 'include'
+}
+
+rootProject.tasks.named("processFunctionalTestResources") {
+  duplicatesStrategy = 'include'
+}
+
+rootProject.tasks.named("processIntegrationTestResources") {
+  duplicatesStrategy = 'include'
+}
+
